Corrigindos alguns erros com o diretórios das imagens e mudando algumas pastas de lugar.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head> <!--informações que queremos passar para o navegador-->
         <meta charset="UTF-8"> <!--passando uma informação para o navegador, no caso, o charset (conjunto de caracteres)-->
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="estilos/style.css">
     </head>
     <body> <!--informações que queremos ixibir no navegador-->
-        <img id="banner" src="/Barbearia Alura/img/banner.jpg">
+        <img id="banner" src="imagens/banner.jpg">
         <div class="principal">
             <h1>Sobre a Barbearia Alura</h1>
 
@@ -24,7 +24,7 @@
                 <li class="itens">Localização</li>
                 <li class="itens">Profissionais qualificados</li>
             </ul>
-            <img src="/Barbearia Alura/img/beneficios.jpg" class="imagembeneficios">
+            <img src="imagens/beneficios.jpg" class="imagembeneficios">
         </div>
     </body>
 </html>
